--- a/News Board/News Board/View/Storyboards/Base.lproj/Login.storyboard
+++ b/News Board/News Board/View/Storyboards/Base.lproj/Login.storyboard
@@ -92,7 +92,10 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oCh-ci-Oxj">
-                                        <rect key="frame" x="84" y="225" width="246.5" height="23.5"/>
+                                        <rect key="frame" x="84" y="225" width="246.5" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="t9j-v7-SJD"/>
+                                        </constraints>
                                         <attributedString key="attributedText">
                                             <fragment content="Don’t have an Account ? ">
                                                 <attributes>
@@ -108,14 +111,25 @@
                                         </attributedString>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SIM-i6-gWt">
+                                        <rect key="frame" x="84" y="225" width="246.5" height="30"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <connections>
+                                            <action selector="signupBtnTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Wbu-M4-DSp"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="eqz-Ld-Oax" firstAttribute="leading" secondItem="iRw-z0-rIh" secondAttribute="leading" constant="10" id="33Z-pV-eq8"/>
+                                    <constraint firstItem="SIM-i6-gWt" firstAttribute="bottom" secondItem="oCh-ci-Oxj" secondAttribute="bottom" id="8A2-na-aO0"/>
                                     <constraint firstItem="DwT-O9-WgH" firstAttribute="centerX" secondItem="iRw-z0-rIh" secondAttribute="centerX" id="Dvu-L7-ioY"/>
+                                    <constraint firstItem="SIM-i6-gWt" firstAttribute="trailing" secondItem="oCh-ci-Oxj" secondAttribute="trailing" id="M8A-A9-KjK"/>
+                                    <constraint firstItem="SIM-i6-gWt" firstAttribute="width" secondItem="oCh-ci-Oxj" secondAttribute="width" id="NHw-xe-W2f"/>
                                     <constraint firstItem="DwT-O9-WgH" firstAttribute="top" secondItem="eqz-Ld-Oax" secondAttribute="bottom" constant="20" id="TDU-xL-1jB"/>
                                     <constraint firstAttribute="trailing" secondItem="H6A-4p-50N" secondAttribute="trailing" constant="10" id="Uuh-To-rd7"/>
                                     <constraint firstItem="oCh-ci-Oxj" firstAttribute="top" secondItem="DwT-O9-WgH" secondAttribute="bottom" constant="30" id="cVY-kF-xIL"/>
+                                    <constraint firstItem="SIM-i6-gWt" firstAttribute="top" secondItem="oCh-ci-Oxj" secondAttribute="top" id="caS-SR-uV5"/>
                                     <constraint firstItem="H6A-4p-50N" firstAttribute="top" secondItem="iRw-z0-rIh" secondAttribute="top" constant="5" id="daA-Ra-E2d"/>
                                     <constraint firstItem="eqz-Ld-Oax" firstAttribute="top" secondItem="H6A-4p-50N" secondAttribute="bottom" constant="20" id="idz-lP-wSv"/>
                                     <constraint firstItem="oCh-ci-Oxj" firstAttribute="centerX" secondItem="DwT-O9-WgH" secondAttribute="centerX" id="lbn-qE-KIS"/>
@@ -165,7 +179,7 @@
         <!--Sign up-->
         <scene sceneID="GeU-ag-iLc">
             <objects>
-                <viewController id="8eO-wH-OV6" customClass="SignupVC" customModule="News_Board" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="8eO-wH-OV6" customClass="SignupVC" customModule="News_Board" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ED1-26-vkb">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -199,7 +213,7 @@
                                     <constraint firstAttribute="height" constant="50" id="ZdT-fH-aee"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no" textContentType="name"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                             </textField>
                             <textField toolTip="Enter your username" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="74T-60-qte">
                                 <rect key="frame" x="10" y="387" width="394" height="50"/>
@@ -267,10 +281,10 @@
             </objects>
             <point key="canvasLocation" x="1797.1014492753625" y="103.79464285714285"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Main NavVC-->
         <scene sceneID="n1z-YO-FSE">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="a9T-Pu-vuK" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainNavVC" automaticallyAdjustsScrollViewInsets="NO" id="a9T-Pu-vuK" customClass="MainNavVC" customModule="News_Board" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="JvK-8e-9mL">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
